@@ -36,6 +36,7 @@ __all__ = ['deprecated_function',
            'zero_fifteen',
            'zero_sixteen',
            'zero_seventeen',
+           'zero_eighteen',
            ]
 
 from warnings import warn
@@ -53,6 +54,7 @@ zero_fourteen = "%s was deprecated in version 0.14."
 zero_fifteen = "%s was deprecated in version 0.15."
 zero_sixteen = "%s was deprecated in version 0.16."
 zero_seventeen = "%s was deprecated in version 0.17."
+zero_eighteen = "%s was deprecated in version 0.18."
 
 
 def set_warning_method(method):
