@@ -119,6 +119,7 @@ def test_suite():
         'bzrlib.tests.branch_implementations.test_push',
         'bzrlib.tests.branch_implementations.test_revision_history',
         'bzrlib.tests.branch_implementations.test_revision_id_to_revno',
+        'bzrlib.tests.branch_implementations.test_sprout',
         'bzrlib.tests.branch_implementations.test_tags',
         'bzrlib.tests.branch_implementations.test_uncommit',
         'bzrlib.tests.branch_implementations.test_update',
